[package]
name = "mysterious-murder"
version = "0.0.1"
authors = []
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.60", features = ["rc"] }
serde_derive = ""
itertools = ""
rand = "0.6.5"
rand_xorshift = "0.1.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
permutohedron = "0.2.4"
multiset = "0.0.5"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
debug = true

[lib]
crate-type = ["cdylib", "rlib"]
